welcome.lessons.welcome.methods.args.MethodsArgs.scala.error
Program:4: error: not found: value NbPas
		for (compteur <- 1 to NbPas) {
                                      ^Program:8: error: not found: value Nbpas
		for (compteur2 <- 1 to Nbpas) {
                                       ^