welcome.lessons.welcome.methods.args.MethodsArgs.scala.code
def move(nbPas: Int,versLAvant: Boolean) {
	if (versLAvant == true) {
		for (compteur <- 1 to NbPas) {
			avance;
		} 
	} else {
		for (compteur2 <- 1 to Nbpas) {
			recule();
		}
	}
}
